{
    "name": "PlayerInputBindings",
    "maps": [
        {
            "name": "PlayerMouseControlls",
            "id": "6c3b2ed8-83ee-4047-b2cc-9e5612c6d01f",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "fa58ada8-1061-4d00-aeca-339b0bc0f23d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "6ce95350-1001-44f9-bde4-afaabf0f100d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "98226ba7-a9dd-465c-bf36-3697db9cbeb5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "741e4535-7760-4b72-9f66-f2aec7f99e83",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}